<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/image_view_more"
        app:layout_constraintStart_toEndOf="@id/image_view_user"
        app:layout_constraintTop_toTopOf="@id/image_view_user"
        tools:text="User A" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:src="@drawable/ic_more_horiz_black_24dp"
        android:tint="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="@id/image_view_user"
        app:layout_constraintStart_toEndOf="@id/image_view_user"
        tools:text="2 min" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_globe"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_language_black_24dp"
        android:tint="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/text_view_time"
        app:layout_constraintStart_toEndOf="@id/text_view_time"
        app:layout_constraintTop_toBottomOf="@id/text_view_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="2dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@id/image_view_more"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/image_view_user"
        app:layout_constraintTop_toBottomOf="@id/text_view_time"

        tools:text="@string/post_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_content"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/post_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/lighterGray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_post">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:text="BLOG.GOOGLE.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/text_sub_title" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_like"
        android:text="@string/like"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button_comment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_comment"
        android:drawablePadding="8dp"
        android:text="@string/comment"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/button_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_like"
        app:layout_constraintTop_toBottomOf="@+id/post_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_share"
        android:text="@string/share"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_comment"
        app:layout_constraintTop_toBottomOf="@id/post_container" />


</androidx.constraintlayout.widget.ConstraintLayout>